crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_bare_cascades_to_children.txt
(function #eq? @name "test")
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:11
  |
1 | (function #eq? @name "test")
  |           ^^^^
  |
help: use `(node == "x")`

error: expected a child node, or `)` to close
 --> query.ptk:1:16
  |
1 | (function #eq? @name "test")
  |                ^^^^^
